--- a/Codice/Form/Hospitality/StatoPrenotazioni.resx
+++ b/Codice/Form/Hospitality/StatoPrenotazioni.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ToolBar1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -125,42 +128,75 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABG
-        BwAAAk1TRnQBSQFMAgEBAgEAAUQBAAFEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8AFwABzAKZAf8BzAJeAf8BzAJeAf8BmQJeAf8BmQJeAf8BmQJeAf8BmQEr
-        AV4B/wGZAisB/wGZAisB/wGZAisB/wGZAisB/wGZAisB/wFeAisB/wFeAisB/8gAAcwCXgL/ApkB/wHM
-        ApkB/wHMAisB/wMrAf8DwAH/A8AB/wPLAf8DzAH/A00B/wGZAisB/wGZAisB/wGZAisB/wFeAisB/ygA
-        AcwBXgErAf8BzAFeASsB/5gAAcwCXgL/ApkC/wKZAf8BzAKZAf8DVwH/AzoB/wOAAf8D6gH/A+oB/wOG
-        Af8BmQIrAf8BmQIrAf8BmQIrAf8BmQIrAf8oAAHMAV4BKwL/AZkBXgH/AcwBXgErAf+UAAHMAl4C/wKZ
-        Av8CmQL/ApkB/wNXAf8DAAH/AzoC/wHsAcwC/wHsAcwB/wNvAf8BzAIrAf8BzAIrAf8BmQIrAf8BmQIr
-        Af8oAAHMAV4BKwL/AZkBXgL/AZkBXgH/AcwBXgErAf+QAAHMAV4BmQL/AZkBzAL/ApkC/wKZAf8DVwH/
-        A1cB/wNXAf8DVwH/A14B/wGZAl4B/wHMAl4B/wHMAl4B/wHMAisB/wGZAisB/ywAAcwBXgErAv8BmQFe
-        Av8BmQFeAf+QAAHMApkB/wHwAcoBpgH/AfABygGmAv8CmQL/ApkC/wKZAf8BzAKZAf8BzAFeAZkB/wHM
-        Al4B/wHMAl4B/wHMAl4B/wHMAl4B/wHMAl4B/wGZAisB/zAAAcwBXgErAv8BmQFeAf8BzAFeASsB/4wA
-        AcwCmQL/AswB/wHwAcoBpgH/AcwCXgH/AcwCXgH/AcwCXgH/AcwBXgErAf8BzAFeASsB/wHMAisB/wGZ
-        AisB/wGZASsBAAH/AcwCXgH/AcwCXgH/AZkCKwH/DAABzAFeASsB/wHMAV4BKwH/AcwBXgErAf8BzAFe
-        ASsB/wHMAV4BKwH/AZkBXgErAf8MAAHMAV4BKwL/AZkBXgH/AfABygGmAf+MAAHMApkC/wLMAf8BzAJe
-        Cf8D+AH/A/EB/wPqAv8B7AHMAf8D1wH/A8wB/wGZASsBAAH/AcwCXgH/AZkBKwFeAf8MAAHMAZkBXgH/
-        AcwBXgErAv8BmQFeAv8BmQFeAf8BzAGZAV4B/xAAAcwBXgErAf8BzAGZAV4C/wHMAZkB/4wAAcwCmQL/
-        AswB/wHMAl4N/wP4Af8D8QH/A+oC/wHsAcwB/wPXAf8BmQIrAf8BzAJeAf8BmQJeAf8MAAHMAZkBXgL/
-        AZkBXgL/AZkBXgL/AZkBXgH/AcwBXgErAf8QAAHMAV4BKwH/AcwBXgErAv8BzAGZAf+MAAH/ApkC/wLM
-        Af8BzAJeEf8D+AH/A/EB/wPqAv8B7AHMAf8BzAIrAf8BzAJeAf8BmQJeAf8MAAHMAZkBXgL/AZkBXgL/
-        AZkBXgL/AZkBXgH/AcwBXgErAf8BzAFeASsB/wwAAZkBXgErAf8BzAFeASsC/wHMAZkB/4wAAf8CmQL/
-        AswB/wHMApkV/wP4Af8D8QH/A+oB/wHMAV4BKwH/AcwBXgGZAf8BmQJeAf8MAAH/ApkB/wHwAcoBpgH/
-        AfABygGmAv8BzAGZAf8BzAGZAV4B/wHMAV4BKwH/AcwBXgErAf8BzAGZAV4B/wHMAl4B/wGZAV4BKwL/
-        AZkBXgH/AfABygGmAf+MAAHwAcoBpgL/AswC/wKZGf8D+AH/A/EB/wHMAV4BKwH/AV4CKwH/AcwCXgH/
-        DAAB/wKZAf8IAAHwAcoBpgL/AcwBmQL/AZkBXgH/AcwBXgErAf8BzAFeASsB/wHMAV4BKwH/AcwBXgEr
-        Af8B8AHKAaYB/wHwAcoBpgH/jAAB8AHKAaYC/wLMAv8CmR3/A/gB/wHMAl4B/wHMAl4B/wHMAl4B/xwA
+        BwAAAk1TRnQBSQFMAgEBAgEAAUwBAAFMAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8AFwABzAKZAf8BzAJdAf8BzAJdAf8BmQJdAf8BmQJdAf8BmQJdAf8BmQEq
+        AV0B/wGZAioB/wGZAioB/wGZAioB/wGZAioB/wGZAioB/wFdAioB/wFdAioB/8gAAcwCXQL/ApkB/wHM
+        ApkB/wHMAioB/wMqAf8DwAH/A8AB/wPLAf8DzAH/A0wB/wGZAioB/wGZAioB/wGZAioB/wFdAioB/ygA
+        AcwBXQEqAf8BzAFdASoB/5gAAcwCXQL/ApkC/wKZAf8BzAKZAf8DVgH/AzkB/wOAAf8D6gH/A+oB/wOG
+        Af8BmQIqAf8BmQIqAf8BmQIqAf8BmQIqAf8oAAHMAV0BKgL/AZkBXQH/AcwBXQEqAf+UAAHMAl0C/wKZ
+        Av8CmQL/ApkB/wNWAf8DAAH/AzkC/wHsAcwC/wHsAcwB/wNuAf8BzAIqAf8BzAIqAf8BmQIqAf8BmQIq
+        Af8oAAHMAV0BKgL/AZkBXQL/AZkBXQH/AcwBXQEqAf+QAAHMAV0BmQL/AZkBzAL/ApkC/wKZAf8DVgH/
+        A1YB/wNWAf8DVgH/A10B/wGZAl0B/wHMAl0B/wHMAl0B/wHMAioB/wGZAioB/ywAAcwBXQEqAv8BmQFd
+        Av8BmQFdAf+QAAHMApkB/wHwAcoBpgH/AfABygGmAv8CmQL/ApkC/wKZAf8BzAKZAf8BzAFdAZkB/wHM
+        Al0B/wHMAl0B/wHMAl0B/wHMAl0B/wHMAl0B/wGZAioB/zAAAcwBXQEqAv8BmQFdAf8BzAFdASoB/4wA
+        AcwCmQL/AswB/wHwAcoBpgH/AcwCXQH/AcwCXQH/AcwCXQH/AcwBXQEqAf8BzAFdASoB/wHMAioB/wGZ
+        AioB/wGZASoBAAH/AcwCXQH/AcwCXQH/AZkCKgH/DAABzAFdASoB/wHMAV0BKgH/AcwBXQEqAf8BzAFd
+        ASoB/wHMAV0BKgH/AZkBXQEqAf8MAAHMAV0BKgL/AZkBXQH/AfABygGmAf+MAAHMApkC/wLMAf8BzAJd
+        Cf8D+AH/A/EB/wPqAv8B7AHMAf8D1wH/A8wB/wGZASoBAAH/AcwCXQH/AZkBKgFdAf8MAAHMAZkBXQH/
+        AcwBXQEqAv8BmQFdAv8BmQFdAf8BzAGZAV0B/xAAAcwBXQEqAf8BzAGZAV0C/wHMAZkB/4wAAcwCmQL/
+        AswB/wHMAl0N/wP4Af8D8QH/A+oC/wHsAcwB/wPXAf8BmQIqAf8BzAJdAf8BmQJdAf8MAAHMAZkBXQL/
+        AZkBXQL/AZkBXQL/AZkBXQH/AcwBXQEqAf8QAAHMAV0BKgH/AcwBXQEqAv8BzAGZAf+MAAH/ApkC/wLM
+        Af8BzAJdEf8D+AH/A/EB/wPqAv8B7AHMAf8BzAIqAf8BzAJdAf8BmQJdAf8MAAHMAZkBXQL/AZkBXQL/
+        AZkBXQL/AZkBXQH/AcwBXQEqAf8BzAFdASoB/wwAAZkBXQEqAf8BzAFdASoC/wHMAZkB/4wAAf8CmQL/
+        AswB/wHMApkV/wP4Af8D8QH/A+oB/wHMAV0BKgH/AcwBXQGZAf8BmQJdAf8MAAH/ApkB/wHwAcoBpgH/
+        AfABygGmAv8BzAGZAf8BzAGZAV0B/wHMAV0BKgH/AcwBXQEqAf8BzAGZAV0B/wHMAl0B/wGZAV0BKgL/
+        AZkBXQH/AfABygGmAf+MAAHwAcoBpgL/AswC/wKZGf8D+AH/A/EB/wHMAV0BKgH/AV0CKgH/AcwCXQH/
+        DAAB/wKZAf8IAAHwAcoBpgL/AcwBmQL/AZkBXQH/AcwBXQEqAf8BzAFdASoB/wHMAV0BKgH/AcwBXQEq
+        Af8B8AHKAaYB/wHwAcoBpgH/jAAB8AHKAaYC/wLMAv8CmR3/A/gB/wHMAl0B/wHMAl0B/wHMAl0B/xwA
         AfABygGmAv8BzAGZAf8B8AHKAaYC/wKZAv8CmQH/AfABygGmAf8B8AHKAaYB/5AAAfABygGmAf8B8AHK
         AaYB/wHwAcoBpgH/AfABygGmAv8BmQHMAv8CmQH/AcwCmQH/AcwCmQH/AcwCmQH/AcwCmQH/AcwCmQH/
-        AcwBXgGZAf8BzAJeAf8BzAJeAf8gAAH/AswB/wHwAcoBpgH/AfABygGmAf8B8AHKAaYC/wLMAf//AJEA
+        AcwBXQGZAf8BzAJdAf8BzAJdAf8gAAH/AswB/wHwAcoBpgH/AfABygGmAf8B8AHKAaYC/wLMAf//AJEA
         AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8BAAT/BAABgAEBAv8EAAGAAQEB/wGf
         BAABgAEBAf8BjwQAAYABAQH/AYcEAAGAAQEB/wHHBAABgAEBAf8B4wQAAYABAQHAAeMEAAGAAQEBwQHj
         BAABgAEBAcEB4wQAAYABAQHAAeMEAAGAAQEBwAEDBAABgAEBAdgBAwQAAYABAQH8AQcEAAGAAQEB/gEP
         BAAE/wQACw==
 </value>
   </data>
+  <metadata name="Panel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="lblIntestazione.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TabControl1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="TabPage1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="cmdColore.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label11.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtDescrizione.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="txtNumero.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Label20.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ErrorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>123, 17</value>
+  </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>42</value>
